<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ExampleDemo</string>
    <string name="search_hint" translatable="false">Search information</string>
    <string name="google_login_client" translatable="false">905315689902-m8eun8m90h1arir0821797c3drnfu6hc.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">692740238633583</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb692740238633583</string>
    <string name="facebook_client_token" translatable="false">b13b05e4936981d1fa5843f5685818d1</string>

    <string name="shortcuts_disable_message" translatable="false">This shortcut is disabled</string>

    <string name="label_camera" translatable="false">Camera</string>

    <string name="label_location" translatable="false">Location</string>

    <string name="camera_shortcuts_short_label" translatable="false">Using camera</string>
    <string name="camera_shortcuts_long_label" translatable="false">Take pictures or videos with camera</string>

    <string name="biometrics_shortcuts_short_label" translatable="false">Using biometrics</string>
    <string name="biometrics_shortcuts_long_label" translatable="false">Use biometrics for authentication</string>

    <string name="search_shortcuts_short_label" translatable="false">Using search</string>
    <string name="search_shortcuts_long_label" translatable="false">Get content of interest using search</string>

    <string name="location_shortcuts_short_label" translatable="false">Using positioning</string>
    <string name="location_shortcuts_long_label" translatable="false">Get location information by positioning</string>

    <string name="change_language_test" tools:ignore="MissingTranslation">Hello World!</string>

    <string name="adapter_rlt_test" tools:ignore="MissingTranslation">The receiving address is:%s</string>

    <string name="label_tile_example_scan" translatable="false">Scan QR</string>

    <string name="label_desktop_widget_example_description" translatable="false">This is a example description of a desktop widget</string>

    <string name="label_notification_big_text_example" translatable="false">Juejin: A Hub for Developers and Tech Enthusiasts\n\nJuejin, also known as Juejin.im, is a prominent community platform in China dedicated to developers and technology enthusiasts. Since its inception, Juejin has become a go-to resource for individuals seeking to enhance their technical knowledge, share their expertise, and engage in meaningful discussions about the latest trends in the tech world.</string>
</resources>